--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
-tweepy==3.5.0
-wordcloud==1.4.1
-markovify==0.7.1
+markovify==0.9.4
+numpy==1.19.3
+Pillow~=8.0.1
+setuptools==56.0.0
+tweepy==4.8.0
+wordcloud==1.8.1
+APScheduler~=3.9.1
